Fix sonar quality issues